added vote counter

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -15,6 +15,7 @@
     {{#each players}}
       {{> player}}
     {{/each}}
+    <div class="votesLeft">Votes left: <strong>{{votesLeft}}</strong></div>
   </div>
 
   <span class="wrapper">
